展示页面基本框架提交

--- a/demo/css/camera.css
+++ b/demo/css/camera.css
@@ -199,7 +199,8 @@
   left: 68px;
   right: 67px;
   padding: 0 102px;
-  bottom: 8.166666666666667%;
+  /* bottom: 8.166666666666667%; */
+  top:40%;
   text-align: center;
 }
 .camera_caption .text_1 {
@@ -208,7 +209,8 @@
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   .camera_caption {
-    top: 18.166666666666667%;
+    /* top: 18.166666666666667%; */
+    top:40%;
     bottom: auto;
   }
   .camera_caption .text_1 {
@@ -219,7 +221,8 @@
 }
 @media (max-width: 979px) {
   .camera_caption {
-    top: 8.166666666666667%;
+    /* top: 8.166666666666667%; */
+    top: 40%;
     bottom: auto;
     left: 34px;
     right: 33.5px;
