--- a/demo/css/grid.css
+++ b/demo/css/grid.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.clearfix{
+  height: 15px;
+}
 .clearfix:before,
 .clearfix:after {
   display: table;
